# FNR2026-Factory

./: .dockerignore  .gitignore  .gitmodules  DOCKER_OPTIMIZATION.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.autonomy  Dockerfile.base  Dockerfile.builder  Dockerfile.camera  Dockerfile.cartographer  Dockerfile.electromagnet  Dockerfile.localization  Dockerfile.mecanum  Dockerfile.minimu9  Dockerfile.nav2  Dockerfile.publisher  Dockerfile.rf2o  Dockerfile.rplidar  Dockerfile.rviz  Dockerfile.slam  Dockerfile.teleop  MOTOR_CHARACTERIZATION_TUNING.md  SLAM_TOOLBOX_WORKFLOW.md  build-images.sh  cyclonedds.xml  docker-compose.yml  docker_entrypoint.sh  startup.sh
UDP_Server_Sim/: robot_sim.py  server_fnr.py
config/: ekf.yaml  motor_config.yaml  rf2o_params.yaml
datasets/: angular_imu.csv  linear_imu.csv
docker_ws/rosbag2_2026_04_24-01_24_09/: metadata.yaml
docker_ws/src/camera_publisher/: package.xml  setup.cfg  setup.py
docker_ws/src/camera_publisher/camera_publisher/: camera_publisher.py
docker_ws/src/camera_publisher/launch/: camera_compressed.launch.py
docker_ws/src/ekf_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker_ws/src/ekf_launch/launch/: ekf.launch.py
docker_ws/src/electromagnet_gpio/: README.md  package.xml  setup.cfg  setup.py
docker_ws/src/electromagnet_gpio/electromagnet_gpio/: electromagnet_gpio_node.py
docker_ws/src/electromagnet_gpio/launch/: electromagnet.launch.py
docker_ws/src/electromagnet_gpio/resource/: electromagnet_gpio
docker_ws/src/factory_autonomy/: README.md  package.xml  setup.cfg  setup.py
docker_ws/src/factory_autonomy/factory_autonomy/: __init__.py  autonomy_node.py  crate_protocol.py  scheduler.py  waypoint_markers.py  waypoints.py
docker_ws/src/factory_autonomy/launch/: autonomy.launch.py
docker_ws/src/factory_autonomy/resource/: factory_autonomy
docker_ws/src/factory_autonomy/test/: test_crate_protocol.py  test_scheduler.py  test_waypoints.py
docker_ws/src/footprint_publisher/: package.xml  setup.cfg  setup.py
docker_ws/src/footprint_publisher/footprint_publisher/: footprint_publisher_node.py
docker_ws/src/mecanum_driver/: package.xml  setup.py
docker_ws/src/mecanum_driver/launch/: mecanum_driver.launch.py
docker_ws/src/mecanum_driver/mecanum_driver/: mecanum_driver_node.py  motor_driver_node.py
docker_ws/src/minimu9_publisher/: package.xml  setup.cfg  setup.py
docker_ws/src/minimu9_publisher/launch/: minimu9.launch.py
docker_ws/src/minimu9_publisher/minimu9_publisher/: imu_preprocessor.py  minimu9_node.py
docker_ws/src/nav2_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker_ws/src/nav2_localization/launch/: nav2_localization.launch.py
docker_ws/src/robot_description/: CMakeLists.txt  package.xml  setup.py
docker_ws/src/robot_description/launch/: camera_compressed.launch.py  robot_description.launch.py  robot_state_publisher.launch.py  view_robot.launch.py
docker_ws/src/robot_description/urdf/: robot.urdf.xacro
docker_ws/src/waypoint_recorder/: package.xml  setup.cfg  setup.py
docker_ws/src/waypoint_recorder/waypoint_recorder/: session_control.py  waypoint_saver.py
peripherals/FNR26MOTORS/src/: main.cpp
shared/: autonomy_params.yaml  camera_params.yaml  cyclonedds.xml  ekf.yaml  eletro_params.yaml  factory_waypoints.yaml  imu_filter_madgwick.yaml  launch_nav2.sh  mecanum_params.yaml  minimu9_params.yaml  nav2_params.yaml  offline_map_from_bag.sh  rf2o_params.yaml  save_map.sh  session_control_record.yaml  session_control_waypoint.yaml  teleop_params.yaml  view.rviz
shared/camera_info/: unicam.yaml
shared/cartographer_configs/: localization.lua  mapping.lua
shared/recordings/: .gitignore  latest
shared/recordings/session_20260424_104520/: metadata.yaml  session_20260424_104520_0.mcap
shared/recordings/session_20260424_111914/: metadata.yaml  session_20260424_111914_0.mcap
shared/recordings/session_20260424_132134/: metadata.yaml
shared/slam_configs/: README.md  localization.yaml  localization_bag_replay.yaml  online_async.yaml
system/: 99-usb-serial.rules  udev_setup.sh
test/: motor_plotter.py  pyvenv.cfg  requirements.txt
