<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_publisher</name>
  <version>0.0.1</version>
  <description>ROS2 camera publisher with compressed JPEG output</description>
  <maintainer email="todo@todo.com">FNR26</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
